--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "fastify-static": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
